--- a/.env
+++ b/.env
@@ -26,11 +26,11 @@ CALCOM_PRIVATE_API_ROUTE="https://goblin.cal.com"
 # ***********************************************************************************************************
 
 # - DATABASE ************************************************************************************************
-DATABASE_URL="postgresql://postgres:9P4DKgfPXwPpKNxgWsuc@database-1.cryuieaaua20.us-east-1.rds.amazonaws.com:5432/database-1"
+DATABASE_URL="postgresql://postgres:OApHe3hd5CKLel3EQREg@database-1.cryuieaaua20.us-east-1.rds.amazonaws.com/database-1"
 
 # Needed to run migrations while using a connection pooler like PgBouncer
 # Use the same one as DATABASE_URL if you're not using a connection pooler
-DATABASE_DIRECT_URL="postgresql://postgres:9P4DKgfPXwPpKNxgWsuc@database-1.cryuieaaua20.us-east-1.rds.amazonaws.com:5432/database-1"
+DATABASE_DIRECT_URL="postgresql://postgres:OApHe3hd5CKLel3EQREg@database-1.cryuieaaua20.us-east-1.rds.amazonaws.com/database-1"
 INSIGHTS_DATABASE_URL=
 
 # Uncomment to enable a dedicated connection pool for Prisma using Prisma Data Proxy
@@ -44,9 +44,9 @@ PRISMA_GENERATE_DATAPROXY=
 # - SHARED **************************************************************************************************
 # Set this to http://app.cal.local:3000 if you want to enable organizations, and
 # check variable ORGANIZATIONS_ENABLED at the bottom of this file
-NEXT_PUBLIC_WEBAPP_URL="http://ec2-44-204-155-80.compute-1.amazonaws.com"
+NEXT_PUBLIC_WEBAPP_URL="http://3.83.241.9"
+NEXT_PUBLIC_WEBSITE_URL="http://3.83.241.9"
 # Change to 'http://localhost:3001' if running the website simultaneously
-NEXT_PUBLIC_WEBSITE_URL="http://ec2-44-204-155-80.compute-1.amazonaws.com"
 NEXT_PUBLIC_CONSOLE_URL='http://localhost:3004'
 NEXT_PUBLIC_EMBED_LIB_URL='http://localhost:3000/embed/embed.js'
 
